tests/ui/attr_expected_assignment.stderr
error: fixcol-derive error: Expected assignment ('=' character).
 --> tests/ui/attr_expected_assignment.rs:5:31
  |
5 |     #[fixcol(width = 5, align "right")]
  |                               ^^^^^^^
